--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.3",
     "sockjs-client": "^1.6.1",
     "tailwind-merge": "^3.3.1",
