--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@stomp/stompjs": "^7.2.0",
     "@tailwindcss/vite": "^4.1.14",
     "@types/three": "^0.180.0",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
