--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^9.3.0",
     "@stomp/stompjs": "^7.2.0",
     "@tailwindcss/vite": "^4.1.14",
+    "@types/sockjs-client": "^1.5.4",
     "@types/three": "^0.180.0",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
@@ -29,6 +30,8 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.3",
+    "react-router-dom": "^7.9.3",
+    "sockjs": "^0.3.24",
     "sockjs-client": "^1.6.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
